fix(post styles): remove unnecessary `vertical-align: top` from inline elements

--- a/_sass/components/_post.scss
+++ b/_sass/components/_post.scss
@@ -572,7 +572,6 @@
       max-width: none;
       white-space: normal;
       display: inline-block;
-      vertical-align: top;
       line-height: 1.2;
     }
   }
@@ -583,7 +582,6 @@
     max-width: none;
     overflow: visible;
     display: inline-block;
-    vertical-align: top;
   }
 
   .katex .mord,
